upd order pages

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -134,6 +134,8 @@ img
 	font-size: 22px 
 	border-radius: 2px
 	color: #fff
+	&_lg
+		width: 290px
 
 .btn-default
 	display: inline-block
@@ -144,3 +146,27 @@ img
 	color: #fff
 	font-size: 18px
 	text-align: center
+	&_white
+		background: #fff	
+		color: #a21b43
+		border: 1px solid currentColor
+		font-size: 16px
+
+.btn-link
+	position: relative
+	display: inline-block
+	height: 45px
+	padding: 6px
+	color: #a21b43
+	font-size: 16px
+	line-height: 1
+	vertical-align: top
+
+.btn-wrap
+	display: inline-block
+	width: calc(50% - 5px)
+	margin-left: 5px
+	vertical-align: top
+	button
+		display: block
+		width: 100%
