--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -20,3 +20,7 @@
 @import components/warranty
 @import components/orders
 @import components/hints
+@import components/cart
+@import components/ordering
+@import components/tabs
+@import components/popup
