--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -27,4 +27,4 @@
 @import components/ordering
 @import components/tabs
 @import components/popup
-@import components/product-actions
+@import components/product
