--- a/src/sass/components/_registration.sass
+++ b/src/sass/components/_registration.sass
@@ -10,6 +10,8 @@
 
 .form
 	text-align: left
+	&_pad
+		padding: 0 30px
 
 .form-field
 	position: relative
@@ -132,12 +134,16 @@
 .form-textarea
 	display: block
 	width: 100%
-	min-height: 100px
-	background-color: white
-	border: 1px solid #dbdfe2
-	resize: none
-	padding: 5px 10px
+	// min-height: 100px
+	// background-color: white
+	// border: 1px solid #dbdfe2
+	// resize: none
+	// padding: 5px 10px
 	font-size: 16px
+	color: #000	
+	&::placeholder 
+		color: #000
+		font-size: 16px
 
 .textarea-wrap
 	padding: 10px 20px
