--- a/src/sass/components/_tabs.sass
+++ b/src/sass/components/_tabs.sass
@@ -5,6 +5,20 @@
 	&__item
 	&__content
 		display: none
+		padding: 10px
+		&_pad_no
+			padding: 0
+		h4
+			font-weight: bold
+		h4, ul
+			margin-bottom: 20px
+		h4, li, p
+			font-size: 16px
+			line-height: 1.3
+			color: #1a1a1a
+		p
+			margin-bottom: 20px
+
 	&__link
 		position: relative
 		display: block
@@ -27,3 +41,45 @@
 		transition: transform .2s
 		.is-active &
 			transform: translateY(-50%) rotate(270deg)
+
+
+.product-video
+	position: relative
+	padding-bottom: 56.5%
+	height: 0
+	width: 100%
+	margin-bottom: 15px
+	iframe
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+
+.testimonials
+	&__item
+		margin-bottom: 20px
+
+.testimonial
+	&__header
+		margin-bottom: 10px
+		+clr
+	&__content
+		padding: 0 15px
+	&__user,
+	&__date
+		font-size: 16px
+	&__user
+		float: left
+		color: #a21b43
+	&__date
+		float: right
+		color: #828282
+
+.more-items
+	display: block
+	margin-bottom: 10px
+	padding: 5px 0
+	text-align: center
+	font-size: 16px
+	color: #a21b43
