--- a/src/sass/components/_categories.sass
+++ b/src/sass/components/_categories.sass
@@ -47,6 +47,9 @@
 	padding: 5px 0 
 
 .products-info
+	&__list
+		.is-static &
+			margin-bottom: 0
 	&__item
 		border-top: 1px solid #cbcbcb
 		background-color: #fff
