--- a/src/sass/components/_registration.sass
+++ b/src/sass/components/_registration.sass
@@ -64,6 +64,11 @@
 		width: calc(50% - 5px)
 	&_pad
 		padding: 5px 55px 5px 10px
+	&::placeholder 
+		color: #000
+		font-size: 16px
+		+reg
+
 
 .form-selects
 	font-size: 0
@@ -134,13 +139,14 @@
 .form-textarea
 	display: block
 	width: 100%
-	// min-height: 100px
-	// background-color: white
-	// border: 1px solid #dbdfe2
-	// resize: none
-	// padding: 5px 10px
+	min-height: 100px
+	background-color: white
+	border: 1px solid #dbdfe2
+	resize: none
+	padding: 5px 10px
 	font-size: 16px
 	color: #000	
+	+reg
 	&::placeholder 
 		color: #000
 		font-size: 16px
