--- a/src/sass/components/_tabs.sass
+++ b/src/sass/components/_tabs.sass
@@ -1,8 +1,6 @@
 .tabs
 	&_out
 		margin: 0 -10px 20px
-	&__list
-	&__item
 	&__content
 		display: none
 		padding: 10px
@@ -18,6 +16,9 @@
 			color: #1a1a1a
 		p
 			margin-bottom: 20px
+		.is-static &
+			display: block
+			padding: 0
 
 	&__link
 		position: relative
@@ -33,6 +34,10 @@
 			border-top: 1px solid #cbcbcb
 		&_center
 			text-align: center
+		&_white
+			background-color: #fff
+		.is-static &
+			border-top: none
 	&__arrow
 		position: absolute
 		top: 50%
@@ -78,7 +83,7 @@
 
 .more-items
 	display: block
-	margin-bottom: 10px
+	margin-bottom: 20px
 	padding: 5px 0
 	text-align: center
 	font-size: 16px
