--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -31,18 +31,23 @@
 html, body
 	height: 100%
 	min-height: 100%
+	overflow-x: hidden
+	// transform: translate3D(0,0,0)
 
 body
 	+reg 
 	font-size: 14px
 	line-height: 1.3
-	
+
 // common blocks
 
 .page
 	height: 100%
-	margin-bottom: 0 auto
+	margin: 0 auto
 	min-width: 320px
+	.is-push &
+		position: fixed
+		top: 0
 
 h2, .title-h2
 	font-size: 22px
@@ -172,3 +177,21 @@ img
 	button
 		display: block
 		width: 100%
+
+.scroll-top
+	display: none
+
+	position: fixed
+	bottom: 40px
+	right: 25px
+	z-index: 100
+	// display: block
+	width: 36px
+	height: 36px
+	background-color: rgba(#000, 0.45)
+	border-radius: 3px
+	span
+		position: absolute
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%)
