--- a/src/sass/components/_product.sass
+++ b/src/sass/components/_product.sass
@@ -4,16 +4,6 @@
 		border-bottom: 1px solid #cbcbcb
 	&__header
 		margin-bottom: 10px
-
-	&__title
-		font-size: 18px
-		line-height: 1.3
-		font-weight: normal
-		color: #000
-		text-transform: uppercase
-	&__subtitle
-		font-size: 12px
-		color: #787878
 	&__pay-plan
 		position: absolute
 		right: 0 
@@ -23,6 +13,17 @@
 	&__slider
 		position: relative
 		margin-bottom: 20px
+
+.product-title
+	font-size: 18px
+	line-height: 1.3
+	font-weight: normal
+	color: #000
+	text-transform: uppercase
+
+.product-code
+	font-size: 12px
+	color: #787878
 
 .item-slider
 
