upd btn to top, popups for service center

--- a/src/sass/components/_ordering.sass
+++ b/src/sass/components/_ordering.sass
@@ -135,5 +135,12 @@
 		text-align: center
 		color: #231e23
 		font-size: 18px
+		&_mb
+			margin-bottom: 40px
+		&_lg
+			font-size: 22px
 	.icon-check
 		margin-bottom: 30px
+
+.text-red
+	color: #ad1547
