--- a/src/sass/components/_registration.sass
+++ b/src/sass/components/_registration.sass
@@ -250,6 +250,17 @@
 		top: 50%
 		left: 54%  
 		transform: translate(-50%, -50%)
+	&_block
+		position: relative
+		display: block
+		width: 100%
+		max-width: 300px
+		margin: 0 auto 20px
+		font-size: 22px
+		color: #fff
+		.icon-arr_right_w
+			left: auto
+			right: 15px
 
 .socials
 	margin-bottom: 40px
