--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -29,9 +29,9 @@
 // 	font-family: "book", Arial, sans-serif
 
 html, body
-	height: 100%
+	// height: 100%
 	min-height: 100%
-	overflow-x: hidden
+	overflow-x: auto
 	// transform: translate3D(0,0,0)
 
 body
@@ -91,7 +91,11 @@ h3, .title-h3
 		margin-bottom: 25px
 	&_bold
 		font-weight: bold
-	
+	&_center
+		text-align: center
+	&_mb_no
+		margin-bottom: 0
+
 .subtext
 	display: block 
 	margin-bottom: 5px
@@ -172,24 +176,28 @@ img
 .btn-wrap
 	display: inline-block
 	width: calc(50% - 5px)
-	margin-left: 5px
+	// margin-left: 5px
 	vertical-align: top
 	button
 		display: block
 		width: 100%
 
 .scroll-top
-	display: none
-
+	display: block
 	position: fixed
 	bottom: 40px
-	right: 25px
+	right: 15px
 	z-index: 100
-	// display: block
 	width: 36px
 	height: 36px
 	background-color: rgba(#000, 0.45)
 	border-radius: 3px
+	visibility: hidden
+	opacity: 0
+	transition: opacity .3s
+	&.is-visible
+		opacity: 1
+		visibility: visible
 	span
 		position: absolute
 		top: 50%
