--- a/src/sass/components/_popup.sass
+++ b/src/sass/components/_popup.sass
@@ -13,7 +13,7 @@
     position: absolute
     top: 20px
     left: 50%
-    bottom: 20px
+    // bottom: 20px
     max-width: 500px
     width: calc(100% - 20px)
     padding: 20px 15px
